testing/errors/symboltwice1.a
	*=$1000
	!src "alreadydefined.inc"
label
